hphp/hack/test/typecheck/array/safe_vector_array/disallow_darray_with_non_arraykey_keys.php.exp
File "disallow_darray_with_non_arraykey_keys.php", line 3, characters 41-54:
Some type arguments violate their constraints (Typing[4323])
  File "hackarray.hhi", line 24, characters 28-29:
  `Tk` is a constrained type parameter
  File "hackarray.hhi", line 24, characters 34-41:
  This type constraint is violated
  File "hackarray.hhi", line 24, characters 34-41:
  Expected `arraykey`
  File "disallow_darray_with_non_arraykey_keys.php", line 3, characters 48-49:
  But got `Tk`
File "disallow_darray_with_non_arraykey_keys.php", line 4, characters 10-31:
Invalid index type for this darray (Typing[4110])
  File "disallow_darray_with_non_arraykey_keys.php", line 4, characters 17-20:
  Expected `arraykey` because only array keys can be used to index into a `Map`, `dict`, `darray`, `Set`, or `keyset`
  File "disallow_darray_with_non_arraykey_keys.php", line 3, characters 20-21:
  But got `Tk`
